[tool.poetry]
name = "RealTimeEarthquakeDetectionSamplewtihAI"
version = "0.1.0"
description = "A Python project for real-time earthquake detection using AI."
authors = ["Osman Aslan <insert-email-here>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1"
numpy = "^1.19"
scikit-learn = "^0.23"
scipy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"